--- a/CloudFormation.yaml
+++ b/CloudFormation.yaml
@@ -28,7 +28,7 @@ Resources:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       CodeUri: functions/
-      Handler: app-pto-balances.handler
+      Handler: app-pto-balances.lambdaHandler
       Runtime: nodejs12.x
       Events:
         PTOBalances:
@@ -53,3 +53,9 @@ Outputs:
   PTOBalancesApi:
     Description: "API Gateway endpoint URL for Prod stage for PTO Balances function"
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/pto-balances/"
+  PTOBalancesFunction:
+    Description: "PTO Balances Lambda Function ARN"
+    Value: !GetAtt PTOBalancesFunction.Arn
+  PTOBalancesFunctionIamRole:
+    Description: "Implicit IAM Role created for PTO Balances function"
+    Value: !GetAtt PTOBalancesFunctionRole.Arn
