890-I-want-the-API-to-translate-the-pto_balances-object: Translate balance code to job name

--- a/package.json
+++ b/package.json
@@ -8,13 +8,6 @@
   "scripts": {
     "test": "jasmine",
     "build": "sam build -t CloudFormation.yaml",
-    "invoke": "sam local invoke \"PTOBalancesFunction\" -e events/event.json"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "lodash": "^4.17.15"
-  },
-  "devDependencies": {
-    "jasmine": "^3.5.0"
+    "invoke": "sam build -t CloudFormation.yaml && sam local invoke \"PTOBalancesFunction\" -e events/event.json"
   }
 }
