--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "author": "Case Consulting",
   "scripts": {
     "build": "sam build -t CloudFormation.yaml",
-    "deploy": "sam deploy --template-file CloudFormation.yaml",
-    "local": "sam build -t CloudFormation.yaml && sam local invoke \"PTOBalancesFunction\" -e events/event.json",
+    "deploy": "npm run build && sam deploy --template-file CloudFormation.yaml",
+    "local": "npm run build && sam local invoke \"PTOBalancesFunction\" -e events/event.json",
     "test": "jasmine"
   },
   "dependencies": {
+    "aws-param-store": "^3.2.0",
     "axios": "^0.18.0",
     "lodash": "^4.17.15",
     "request": "^2.88.2",
