--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "jasmine"
   },
   "dependencies": {
-    "aws-param-store": "^3.2.0",
-    "axios": "^0.18.0",
+    "aws-sdk": "^2.639.0",
+    "axios": "^0.19.2",
     "lodash": "^4.17.15",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
