--- a/CloudFormation.yaml
+++ b/CloudFormation.yaml
@@ -18,8 +18,8 @@ Resources:
       Handler: app-pto-balances.lambdaHandler
       Role:
         Fn::GetAtt:
-        - PTOBalancesFunctionRole
-        - Arn
+          - PTOBalancesFunctionRole
+          - Arn
       Runtime: nodejs12.x
       Timeout: 30
       Events:
@@ -33,33 +33,33 @@ Resources:
     Properties:
       AssumeRolePolicyDocument:
         Statement:
-        - Action:
-          - sts:AssumeRole
-          Effect: Allow
-          Principal:
-            Service:
-            - lambda.amazonaws.com
+          - Action:
+              - sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
         Version: '2012-10-17'
       Policies:
-      - PolicyDocument:
-          Statement:
-          - Action:
-            - ssm:GetParameter*
-            Effect: Allow
-            Resource:
-              Fn::Sub: arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/TSheets/accessToken
-          Version: '2012-10-17'
-        PolicyName: PTOBalancesParameterAccess
-      - PolicyDocument:
-          Statement:
-          - Action:
-            - logs:CreateLogGroup
-            - logs:CreateLogStream
-            - logs:PutLogEvents
-            Effect: Allow
-            Resource: '*'
-          Version: '2012-10-17'
-        PolicyName: PTOBalancesLambdaBasicExecution
+        - PolicyDocument:
+            Statement:
+              - Action:
+                  - ssm:GetParameter*
+                Effect: Allow
+                Resource:
+                  Fn::Sub: arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/TSheets/accessToken
+            Version: '2012-10-17'
+          PolicyName: PTOBalancesParameterAccess
+        - PolicyDocument:
+            Statement:
+              - Action:
+                  - logs:CreateLogGroup
+                  - logs:CreateLogStream
+                  - logs:PutLogEvents
+                Effect: Allow
+                Resource: '*'
+            Version: '2012-10-17'
+          PolicyName: PTOBalancesLambdaBasicExecution
     Type: AWS::IAM::Role
 Transform: AWS::Serverless-2016-10-31
 
@@ -68,11 +68,11 @@ Outputs:
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   PTOBalancesApi:
-    Description: "API Gateway endpoint URL for Prod stage for PTO Balances function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/pto-balances/"
+    Description: 'API Gateway endpoint URL for Prod stage for PTO Balances function'
+    Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/pto-balances/'
   PTOBalancesFunction:
-    Description: "PTO Balances Lambda Function ARN"
+    Description: 'PTO Balances Lambda Function ARN'
     Value: !GetAtt PTOBalancesFunction.Arn
   PTOBalancesFunctionIamRole:
-    Description: "Implicit IAM Role created for PTO Balances function"
+    Description: 'Implicit IAM Role created for PTO Balances function'
     Value: !GetAtt PTOBalancesFunctionRole.Arn
