--- a/package.json
+++ b/package.json
@@ -7,16 +7,11 @@
   "author": "Case Consulting",
   "scripts": {
     "build": "sam build -t CloudFormation.yaml",
-    "deploy": "npm run build && sam deploy --template-file CloudFormation.yaml",
-    "local": "npm run build && sam local invoke \"PTOBalancesFunction\" -e events/event.json",
-    "test": "jasmine"
-  },
-  "dependencies": {
-    "aws-sdk": "^2.641.0",
-    "axios": "^0.19.2",
-    "lodash": "^4.17.15",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "deploy:dev": "npm run build && sam deploy --template-file CloudFormation.yaml --region us-east-1 --capabilities CAPABILITY_IAM --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --stack-name mysterio-dev --parameter-overrides Stage=dev",
+    "local:ptoBalances": "npm run build && sam local invoke PTOBalancesFunction -e ptoBalances/event.json",
+    "tail:dev:ptoBalances": "sam logs -n PTOBalancesFunction --stack-name mysterio-dev --tail",
+    "test": "jasmine",
+    "validate": "npm ls"
   },
   "devDependencies": {
     "jasmine": "^3.5.0"
