--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "sam build -t CloudFormation.yaml",
     "deploy:dev": "npm run build && sam deploy --template-file CloudFormation.yaml --region us-east-1 --capabilities CAPABILITY_IAM --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --stack-name mysterio-dev --parameter-overrides Stage=dev",
-    "local:ptoBalances": "npm run build && sam local invoke PTOBalancesFunction -e ptoBalances/event.json",
+    "local:ptoBalances": "npm run build && sam local invoke PTOBalancesFunction -e pto-balances/event.json",
     "tail:dev:ptoBalances": "sam logs -n PTOBalancesFunction --stack-name mysterio-dev --tail",
     "test": "jasmine",
     "validate": "npm ls"
