--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "deploy:dev": "npm run build && npm run package:dev && npm run deploy:packaged:dev",
     "deploy:packaged:dev": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --stack-name mysterio-dev --parameter-overrides Stage=dev",
     "local:pto-balances": "npm run build && sam local invoke PTOBalancesFunction -e pto-balances/event.json",
+    "local:time-sheets": "npm run build && sam local invoke TimeSheetsFunction -e time-sheets/event.json",
     "package:dev": "sam package --s3-bucket case-consulting-sam-deployments --s3-prefix mysterio-dev --output-template-file packaged.yaml",
     "tail:dev:pto-balances": "sam logs -n PTOBalancesFunction --stack-name mysterio-dev --tail",
+    "tail:dev:time-sheets": "sam logs -n TimeSheetsFunction --stack-name mysterio-dev --tail",
     "test": "jasmine",
     "validate": "npm ls"
   },
